--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-modal": "^3.16.1"
+    "react-modal": "^3.16.1",
+    "swiper": "^10.3.1"
   },
   "devDependencies": {
     "eslint": "^8",
