--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-modal": "^3.16.1",
+    "react-twitter-widgets": "^1.11.0",
     "swiper": "^10.3.1"
   },
   "devDependencies": {
