--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@juggle/resize-observer": "^3.4.0",
     "framer-motion": "^10.16.4",
+    "google-map-react": "^2.2.1",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.11.0",
     "react-modal": "^3.16.1",
     "react-twitter-widgets": "^1.11.0",
     "swiper": "^10.3.1"
