--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@juggle/resize-observer": "^3.4.0",
     "framer-motion": "^10.16.4",
     "google-map-react": "^2.2.1",
