--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "framer-motion": "^10.16.4",
     "google-map-react": "^2.2.1",
     "next": "13.5.4",
+    "plaiceholder": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-modal": "^3.16.1",
     "react-twitter-widgets": "^1.11.0",
+    "sharp": "^0.32.6",
     "swiper": "^10.3.1"
   },
   "devDependencies": {
