--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@juggle/resize-observer": "^3.4.0",
     "framer-motion": "^10.16.4",
     "google-map-react": "^2.2.1",
