--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "google-map-react": "^2.2.1",
     "negotiator": "^0.6.3",
     "next": "13.5.4",
+    "next-nprogress-bar": "^2.1.2",
     "plaiceholder": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
