--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "swiper": "^10.3.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.18",
+    "daisyui": "^4.7.2",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4"
+    "eslint-config-next": "13.5.4",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
