--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@juggle/resize-observer": "^3.4.0",
+    "@vercel/speed-insights": "^1.0.10",
     "framer-motion": "^10.16.4",
     "google-map-react": "^2.2.1",
     "negotiator": "^0.6.3",
