--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "google-map-react": "^2.2.1",
     "negotiator": "^0.6.3",
     "next": "13.5.4",
-    "nextjs13-progress": "^1.2.5",
+    "nextjs-toploader": "^1.6.11",
     "plaiceholder": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
